k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oficina-app
  namespace: oficina
  labels:
    app.kubernetes.io/name: oficina-app
    app.kubernetes.io/component: api
spec:
  type: ClusterIP
  selector:
    app: oficina-app
  ports:
    - name: http
      port: 8080
      targetPort: http
