k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oficina-gateway
  namespace: oficina
  labels:
    app.kubernetes.io/name: oficina-gateway
    app.kubernetes.io/component: api-gateway
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /token
            pathType: Prefix
            backend:
              service:
                name: oficina-auth
                port:
                  number: 8080
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: oficina-app
                port:
                  number: 8080
